--- a/lib/potassium/assets/bin/setup.erb
+++ b/lib/potassium/assets/bin/setup.erb
@@ -10,6 +10,9 @@ set -e
 gem install bundler --conservative
 bundle check || bundle install
 
+# Set up front dependencies via Bower
+bower install || printf "\e[31mBower install failed, check if you have bower installed.\e[0m\n"
+
 # Set up database
 bin/rake db:setup
 
